# parsival

./: CMakeLists.txt  README.md  Stream.h  main.cpp
parsival_controller/: parsival_controller.ino
parsival_movement_creator/: Movement.mako  MovementList.mako  movement_code_creator.py
parsival_remote/: CMakeLists.txt  Serial.cpp  Serial.h  parsival_remote.cpp
parsival_robot/: DirectPose.h  JointController.h  JointControllerInterface.h  JointInterface.h  Movement.h  MovementController.h  MovementList.h  Parsival.h  Pose.h  RelaxPoseMovement.h  SinusoidMovementJoint.h  StaticTimePose.h  TimedPose.h  parsival_robot.ino
parsival_robot/movements/: MovementTurnLeft.h  MovementTurnRight.h
parsival_robot_pc_debug/: Arduino.cpp  Arduino.h  HardwareSerial.h  PololuMaestro.h  main.cpp
